# STAT-159-Final-Project

./: LICENSE  LinearRegression.ipynb  Makefile  README.md  _config.yml  _toc.yml  conf.py  environment.yml  experiment.txt  file1.txt  file3.txt  pyproj.toml  requirements.txt  setup.cfg
.ipynb_checkpoints/: file2-checkpoint.txt
_build/.doctrees/: LinearRegression.doctree  README.doctree  Third.doctree  environment.pickle  intro.doctree  notebooks.doctree  project-description.doctree  sales-of-cigarette-each-state.doctree
_build/html/: .buildinfo  First.html  LinearRegression.html  README.html  Third.html  genindex.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  project-description.html  ref.html  sales-of-cigarette-each-state.html  search.html  searchindex.js
_build/html/.doctrees/: First.doctree  LinearRegression.doctree  README.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  project-description.doctree  (+1 more)
_build/jupyter_execute/: First.ipynb  LinearRegression.ipynb  Third.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  sales-of-cigarette-each-state.ipynb
data/: states_sales.csv
output/: avgSales2013.html  avgSales2014.html  avgSales2016.html  avgSales2017.html  avgSales2018.html  avgSales2019.html  medianIncome2013.html  medianIncome2014.html  medianIncome2015.html  medianIncome2016.html  medianIncome2017.html  medianIncome2018.html  medianIncome2019.html
project_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project_tools/tests/: test_dataformat.py
(+6 files in other folders)
